tdf#92244 Gaps at end of menu separator lines read from GTK theme.

Reviewed-on: https://gerrit.libreoffice.org/16886
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit f1faa887c0c934484fb32a8ec5fbbc9e89f38037)

Change-Id: I3c42d918680ac989c5cd7cd1022e4a6e7b53aa11
Reviewed-on: https://gerrit.libreoffice.org/16930
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>